--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,47 @@
 baseURL = "http://hookszhang.space/"
 languageCode = "en-us"
-title = "Hooks Zhang Blogs[Coming soon]"
-theme = "ananke"
+title = "Hooks Zhang's Blog"
+theme = "minimal"
+disqusShortname = "hookszhang-space" # delete this to disable disqus comments
+googleAnalytics = ""
+
+[params]
+    author = "Hooks Zhang"
+    description = ""
+    githubUsername = "hookszhang"
+    accent = "red"
+    showBorder = true
+    backgroundColor = "white"
+    font = "Raleway" # should match the name on Google Fonts!
+    highlight = true
+    highlightStyle = "solarized-dark"
+    highlightLanguages = ["go", "haskell", "kotlin", "scala", "swift"]
+
+[[menu.main]]
+    url = "/"
+    name = "Home"
+    weight = 1
+
+[[menu.main]]
+    url = "/posts/"
+    name = "Posts"
+    weight = 2
+
+# Social icons to be shown on the right-hand side of the navigation bar
+# The "name" field should match the name of the icon to be used
+# The list of available icons can be found at http://fontawesome.io/icons/
+
+[[menu.icon]]
+    url = "mailto:hookszhang@gmail.com"
+    name = "envelope-o"
+    weight = 1
+
+[[menu.icon]]
+    url = "https://github.com/hookszhang/"
+    name = "github"
+    weight = 2
+
+[[menu.icon]]
+    url = "https://stackoverflow.com/users/4715098/hooks-zhang"
+    name = "stack-overflow"
+    weight = 5
