Update config.toml, add description

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ googleAnalytics = ""
 
 [params]
     author = "Hooks Zhang"
-    description = ""
+    description = "Technology hipster"
     githubUsername = "hookszhang"
     accent = "red"
     showBorder = true
